--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://vineeth-alamothu.github.io/chat-application",
+  "homepage": "http://vineeth-alamothu.github.io/homepage",
   "name": "chat-application",
   "version": "0.1.0",
   "private": true,
