--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,6 +30,12 @@ jobs:
         node-version: '18'
         cache: 'npm'
         
+    - name: Configure npm for private packages
+      run: |
+        echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_TOKEN }}" >> .npmrc
+        echo "@watchparty-org:registry=https://npm.pkg.github.com" >> .npmrc
+        git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf "ssh://git@github.com/"
+        
     - name: Install dependencies
       run: npm i
       
