--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -32,9 +32,10 @@ jobs:
         
     - name: Configure npm for private packages
       run: |
-        echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_TOKEN }}" >> .npmrc
+        echo "//npm.pkg.github.com/:_authToken=${{ secrets.GH_TOKEN }}" > .npmrc
         echo "@watchparty-org:registry=https://npm.pkg.github.com" >> .npmrc
-        git config --global url."https://${{ secrets.GH_TOKEN }}@github.com/".insteadOf "ssh://git@github.com/"
+        npm config set @watchparty-org:registry https://npm.pkg.github.com
+        npm config set //npm.pkg.github.com/:_authToken ${{ secrets.GH_TOKEN }}
         
     - name: Install dependencies
       run: npm i
