--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,6 +30,12 @@ jobs:
         node-version: '18'
         cache: 'npm'
     
+    - name: Install dependencies
+      run: |
+        npm install --legacy-peer-deps --no-fund --no-audit --progress=false
+      env:
+        NODE_AUTH_TOKEN: ${{ secrets.GH_TOKEN }}
+    
     - name: Build project
       run: npm run build
       
